tdf#112446 ooxmlimport: Orient=NONE when distance is given

Prior to commit 9920a0bf9d783978cd6f7b97f7528d8aa2571143
the style could only contain the default of NONE. So when
a position was specified, it was always paired with
HoriOrient == NONE. So it never caused problems until
that commit when the Frame's style orientation started
overriding the unset paragraph default.

When a position is specified, that needs to be paired with an
orientation of NONE in order to take effect.

Change-Id: Iab0057810270ba708a8855c2ec6db291cef17cfb